# pinned

./: .env  DESIGN.md  README.md
pinned-backend/: .env.example  .gitignore  Cargo.toml  diesel.toml  package-lock.json  package.json  top  tsconfig.json
pinned-backend/crates/api/: Cargo.toml
pinned-backend/crates/api/src/: lib.rs
pinned-backend/crates/api_routes/: Cargo.toml
pinned-backend/crates/api_routes/src/: dto.rs  lib.rs
pinned-backend/crates/api_routes/src/collections/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
pinned-backend/crates/api_routes/src/comments/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
pinned-backend/crates/api_routes/src/posts/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
pinned-backend/crates/api_routes/src/users/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
pinned-backend/crates/db/: .env  Cargo.toml
pinned-backend/crates/db/src/: lib.rs
pinned-backend/crates/db/src/crud/: collections.rs  comments.rs  mod.rs  posts.rs  users.rs
pinned-backend/crates/db_schema/: Cargo.toml
pinned-backend/crates/db_schema/src/: lib.rs  models.rs  schema.rs
pinned-backend/crates/utils/: Cargo.toml
pinned-backend/crates/utils/src/: lib.rs
pinned-backend/migrations/2023-11-27-182524_users/: up.sql
pinned-backend/migrations/2023-11-30-041314_posts/: up.sql
pinned-backend/migrations/2023-11-30-041656_comments/: up.sql
pinned-backend/migrations/2023-12-15-021641_collections/: up.sql
pinned-backend/src/: main.rs  server.ts
pinned-backend/src/api/: api.ts
pinned-cdn/: .gitignore  README.md  main.py
pinned-frontend/: .env.example  index.html  next.config.js  package-lock.json  package.json
pinned-frontend/src/: index.tsx  root.css  root.tsx
pinned-frontend/src/api/: resources.ts
pinned-frontend/src/api/cdn/: cdn.client.ts  dto.ts
pinned-frontend/src/api/collections/: collections.client.ts  dto.ts
pinned-frontend/src/api/comments/: comment.client.ts  dto.ts
pinned-frontend/src/api/post/: dto.ts  post.client.ts  post.ts
pinned-frontend/src/api/user/: dto.ts  user.client.ts  user.ts  users.ts
pinned-frontend/src/app/: client.tsx  globals.css  globals.scss  home.module.scss  layout.tsx  page.tsx
pinned-frontend/src/app/about/: page.tsx
pinned-frontend/src/app/post/[id]/: client.tsx  page.tsx  post.module.scss
pinned-frontend/src/app/post/collection/[id]/: client.tsx  collection.module.scss  page.tsx
pinned-frontend/src/app/post/collection/explore/: client.tsx  page.tsx
pinned-frontend/src/app/post/collection/new/: client.tsx  page.tsx
pinned-frontend/src/app/post/collection/search/: client.tsx  page.tsx
pinned-frontend/src/app/post/explore/: client.tsx  explore.module.scss  page.tsx
pinned-frontend/src/app/post/favourites/: client.tsx  page.tsx
pinned-frontend/src/app/post/new/: client.tsx  new.module.scss  page.tsx
pinned-frontend/src/app/post/search/: client.tsx  page.tsx  search.module.scss
pinned-frontend/src/app/team/: page.tsx  team.module.scss
pinned-frontend/src/app/user/[id]/: client.tsx  collections.tsx  comments.tsx  page.tsx  posts.module.scss  posts.tsx  user.module.scss
pinned-frontend/src/app/user/explore/: client.tsx  explore.module.scss  page.tsx
pinned-frontend/src/app/user/login/: client.tsx  login.module.scss  page.tsx
pinned-frontend/src/app/user/search/: client.tsx  page.tsx  search.module.scss
pinned-frontend/src/app/user/settings/: client.tsx  page.tsx  settings.module.scss
pinned-frontend/src/components/comments/: comments.module.scss  comments.tsx
pinned-frontend/src/components/explore-post/: explore-collection.tsx  explore-post.module.scss  explore-post.tsx
pinned-frontend/src/components/favourite/: favourite.tsx
pinned-frontend/src/components/footer/: client.tsx  footer.module.scss  footer.tsx
pinned-frontend/src/components/header/: client.tsx  header.css  header.module.scss  header.tsx
pinned-frontend/src/components/like-chip/: like-chip.module.scss  like-chip.tsx
pinned-frontend/src/components/loading/: loading.module.scss  loading.tsx
pinned-frontend/src/components/more-menu/: more-menu.module.scss  more-menu.tsx
pinned-frontend/src/components/pin/: pin.tsx
pinned-frontend/src/components/popup/: popup.module.scss  popup.tsx
pinned-frontend/src/components/post-preview/: collection-preview.tsx  post-preview.module.scss  post-preview.tsx
pinned-frontend/src/components/slide_gallery/: gallery.module.scss  gallery.tsx
pinned-frontend/src/components/theme-button/: theme-button.tsx  theme-handler.tsx  theme.module.scss
pinned-frontend/src/components/user-chip/: user-chip.module.scss  user-chip.tsx
pinned-frontend/src/components/user-preview/: preview.module.scss  preview.tsx
pinned-frontend/src/routes/: index.tsx
pinned-frontend/src/routes/user/: auth.css  auth.tsx
pinned-frontend/src/routes/user/[id]/: index.tsx
pinned-frontend/src/utils/: notification.ts  resources.ts
