[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A web platform for creatives and creators."
license = "AGPL-3.0"
repository = "https://github.com/CKAY-9/pinned"

[package]
name = "pinned_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = [
  "crates/api",
  "crates/api_routes",
  "crates/db",
  "crates/db_schema",
  "crates/utils"
]

[workspace.dependencies]
pinned_api = { version = "0.1.0", path = "./crates/api" }
pinned_db = { version = "0.1.0", path = "./crates/db" }
pinned_db_schema = { version = "0.1.0", path = "./crates/db_schema" }
pinned_api_routes = { version = "0.1.0", path = "./crates/api_routes" }
pinned_utils = { version = "0.1.0", path = "./crates/utils" }
sha2 = "0.10.8"
actix-web = "4.4.0"
actix-cors = "0.6.5"
chrono = "0.4.31"
diesel = { version = "2.1.4", default-features = false, features = ["postgres"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
reqwest = "0.11.22"
serde_json = "1.0"
rand = "0.8.5"
iso8601 = "0.6.1"

[dependencies]
pinned_db = { workspace = true }
pinned_db_schema = { workspace = true }
pinned_api = { workspace = true }
pinned_api_routes = { workspace = true }
pinned_utils = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
dotenv = { workspace = true }
