[package]
name = "pinned_api"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_api"
path = "src/lib.rs"
doctest = false

[dependencies]
pinned_api_routes = { workspace = true }
actix-web = { workspace = true }

