[package]
name = "pinned_api_routes"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_api_routes"
path = "src/lib.rs"
doctest = false

[dependencies]
pinned_db = { workspace = true }
actix-web = { workspace = true }

