[package]
name = "pinned_api_routes"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_api_routes"
path = "src/lib.rs"
doctest = false

[dependencies]
pinned_db = { workspace = true }
pinned_utils = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
pinned_db_schema = { workspace = true }
rand = { workspace = true }
