[package]
name = "pinned_db"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_db"
path = "src/lib.rs"
doctest = false

[dependencies]
dotenv = { workspace = true }
diesel = { workspace = true }
pinned_utils = { workspace = true }
pinned_db_schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }