[package]
name = "pinned_db_schema"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_db_schema"
path = "src/lib.rs"
doctest = false

[dependencies]
dotenv = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
pinned_utils = { workspace = true }
