[package]
name = "pinned_utils"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pinned_utils"
path = "src/lib.rs"
doctest = false

[dependencies]
dotenv = { workspace = true }
chrono = { workspace = true }
